Page content width fix on tablet

--- a/frontDesk/style.css
+++ b/frontDesk/style.css
@@ -167,7 +167,7 @@ h3 .notion-semantic-string {
 
 @media (max-width: 768px) {
   .super-content > article[id*="ations"]:first-child {
-    max-width: 40ch;
+    max-width: unset;
   }
 }
 
